package model;

public interface CardAction {
    public void execute(GameContext context);
}
