package model;

public enum CardType {
    DEFUSE,
    EXPLODING_KITTEN,
    NOPE,
    SHUFFLE,
    SWAP_TOP_AND_BOTTOM
}
