package model;

public enum GamePhase {
    NORMAL,
    NOPE_PHASE,
    EXPLOSION_PHASE,
    GAME_OVER
}
