@startuml
scale max 512 height
package model {
    +interface GameObserver {
        +onGameMessage(message: String): void
        +onTurnChanged(playerIdx: int): void
        +onCardPlayed(playerIdx: int, card: Card): void
        +onRequestNope(actionPlayerIdx: int, cardType: CardType): void
        +onExplosionRisk(playerIdx: int): void
        +onRequestExplosionInsertIndex(): void
        +onDefuseUsed(playerIdx: int): void
        +onPlayerEliminated(playerIdx: int): void
        +onActionCancelled(message: String): void
        +onException(e: GameException): void
    }

    interface GameContext {
        +getDeck(): Deck
        +getCurrentPlayer(): Player
        +getPlayers(): List<Player>
        +getPhase(): GamePhase
        +getPendingAction(): PendingAction
        +registerObservers(observer: GameObserver): void
        +notifyObservers(msg: String) void
    }

    interface CardAction {
        +execute(context: GameContext): void
    }

    package exceptions {
        abstract class GameException {
            +GameException(msg: String)
        }
        exception EmptyDeckException {
        }
        exception NotEnoughCardsException {
        }
        exception InvalidMoveException {
        }

        EmptyDeckException -u-|> GameException
        NotEnoughCardsException -u-|> GameException
        InvalidMoveException -u-|> GameException
    }

    enum GamePhase {
        NORMAL
        NOPE_PHASE
        EXPLOSION_PHASE
        GAME_OVER
    }

    class Game{
        -players: List<Player>
        -deck: Deck
        -observers: List<GameObserver>
        -currentTurn: int
        -phase: GamePhase
        -pendingAction: PendingAction

        +getDeck(): Deck
        +getCurrentPlayer(): Player
        +getPlayers(): List<Player>
        +getPhase(): GamePhase
        +getPendingAction(): PendingAction
        +notifyObservers(msg: String): void

        +start(): void
        +drawCard(playerIdx: int): void
        +playCard(playerIdx: int, cardIdx: int): void
        +handleNopeInput(wantsToNope: boolean): void
        +handleExplosionInsert(index: int): void
        +resolvePendingAction(): void

        -nextTurn(): void
        -checkGameOver(): void
        -handleExplosionLogic(player: Player): void
    }

    class Player {
        -id: int
        -hand: List<Card>
        -isDead: boolean
        +hasCard(cardType: CardType): boolean
        +getNopeIndex(): int
        +removeDefuse(): void
        +removeCard(index: int): Card
        +addCard(card: Card): void
        +getHandSize(): int
        +getId(): int
        +getDead(): boolean
        +setDead(dead: boolean): void
        +getCard(index: int):Card
    }

    class Deck {
        -cards: List<Card>
        +shuffle(): void
        +draw(): Card
        +insertAt(index: int, card: Card): void
        +swapTopAndBottom(): void
        +getDeckSize(): int
    }

    class Card {
        -{final} type: CardType
        -{final} action: CardAction

        +Card(type: CardType, action: CardAction)
        +performAction(ctx: GameContext): void
        +getType(): CardType
        +getAction(): CardAction
    }

    enum CardType {
        DEFUSE
        EXPLODING_KITTEN
        NOPE
        SHUFFLE
        SWAP_TOP_AND_BOTTOM
    }

    class CardFactory {
        +{static} createCard(type: CardType): Card
    }

    class ActionShuffle{
        +execute(ctx: GameContext): void
    }
    class ActionSwapTopBottom{
        +execute(ctx: GameContext): void
    }
    class ActionNope{
        +execute(ctx: GameContext): void
    }
    class ActionPassive{
        -{final} message: String
        +execute(ctx: GameContext): void
    }
    class PendingAction{
        -{final} action: CardAction
        -{final} initiatingPlayerIndex: int
        -{final} nopeCount: int

        +addNope(): void
        +getNopeCount(): int
        +resolve(context: GameContext ): void
    }
}

package view {
    class GameUI implements model.GameObserver {
        -{final} scanner: Scanner

        +onGameMessage(msg: String): void
        +onTurnChanged(pid: int): void
        +onCardPlayed(pid: int, c: Card): void
        +onRequestNope(pid: int, type: CardType): void
        +onExplosionRisk(pid: int): void
        +onRequestExplosionInsertIndex(): void
        +onDefuseUsed(pid: int): void
        +onPlayerEliminated(pid: int): void
        +onActionCancelled(msg: String): void
        +onException(e: GameException): void

        +displayHand(player: Player): void
        +promptPlayerCount(): int
        +promptCommand(): String
        +promptInsertionIndex(deckSize: int): int
        +promptPlayNope(playerId: int): boolean
    }
}

package controller {
    class GameController {
        -game: model.Game
        -ui: view.GameUI

        +startGame(): void
        -gameLoop(): void
        -handleNormalTurn(): void
        -handleExplosionInput(): void
        -handleNopePhase(): void
    }

    class Main {
        +{static} main(args: String[]): void
    }
}

GameController --> model.Game
GameController --> view.GameUI
Main ..> GameController

view.GameUI ..|> model.GameObserver

model.Game --> "1" model.Deck
model.Game --> "*" model.Player
model.Game --> model.PendingAction
model.Game --> model.GamePhase
model.Game ..|> model.GameContext
model.Card --> "1" model.CardAction
model.Card --> model.CardType

model.CardFactory ..> model.Card
model.CardFactory ..> model.CardAction
model.CardFactory ..> model.CardType
model.CardFactory ..> model.ActionShuffle
model.CardFactory ..> model.ActionNope
model.CardFactory ..> model.ActionSwapTopBottom
model.CardFactory ..> model.ActionPassive

model.Player --> "*" model.Card
model.Player ..> model.CardType

model.Deck --> "*" model.Card
model.Deck ..> model.exceptions.EmptyDeckException : <<throws>>
model.ActionSwapTopBottom ..> model.exceptions.NotEnoughCardsException : <<throws>>
model.Game ..> model.exceptions.InvalidMoveException : <<throws>>
view.GameUI ..> model.exceptions.GameException

model.ActionShuffle .u.|> model.CardAction
model.ActionSwapTopBottom .u.|> model.CardAction
model.ActionNope .u.|> model.CardAction
model.ActionPassive .u.|> model.CardAction

model.ActionNope ..> model.PendingAction
model.GameContext ..> model.Deck
model.GameContext ..> model.Player
model.GameContext ..> model.GamePhase
model.GameContext ..> model.GameObserver
model.GameContext ..> model.PendingAction
@enduml